@@ -203,7 +203,7 @@ message ("-- Install prefix: ${CMAKE_INSTALL_PREFIX}")
 
 pkg_check_modules (GNUTLS REQUIRED gnutls>=2.8)
 pkg_check_modules (GLIB REQUIRED glib-2.0>=2.16)
-pkg_check_modules (REDIS REQUIRED hiredis)
+pkg_check_modules (REDIS hiredis)
 if (NOT OPENVAS_OMP_ONLY)
   pkg_check_modules (WMICLIENT wmiclient>=1.3.14)
   pkg_check_modules (WINCMD wincmd>=0.80)
@@ -234,12 +234,24 @@ if (NOT OPENVAS_OMP_ONLY)
   endif (PCAP_CONFIG)
 endif (NOT OPENVAS_OMP_ONLY)
 
-execute_process (COMMAND pkg-config --cflags hiredis
-  OUTPUT_VARIABLE REDIS_CFLAGS
-  OUTPUT_STRIP_TRAILING_WHITESPACE)
-execute_process (COMMAND pkg-config --libs hiredis
-  OUTPUT_VARIABLE REDIS_LDFLAGS
-  OUTPUT_STRIP_TRAILING_WHITESPACE)
+if (NOT REDIS_FOUND)
+  # Make a second attempt to find hiredis without pkg-config
+  message (STATUS "Looking for hiredis...")
+  find_library (HIREDIS hiredis)
+  message (STATUS "Looking for hiredis... ${HIREDIS}")
+  if (NOT HIREDIS)
+    message (FATAL_ERROR "The hiredis library is required.")
+  endif (NOT HIREDIS)
+
+  set (REDIS_LDFLAGS "-lhiredis")
+else (NOT REDIS_FOUND)
+  execute_process (COMMAND pkg-config --cflags hiredis
+    OUTPUT_VARIABLE REDIS_CFLAGS
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+  execute_process (COMMAND pkg-config --libs hiredis
+    OUTPUT_VARIABLE REDIS_LDFLAGS
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+endif (NOT REDIS_FOUND)
 
 execute_process (COMMAND pkg-config --cflags glib-2.0
   OUTPUT_VARIABLE GLIB_CFLAGS
